fixed Navbar icon<->tab alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -178,9 +178,9 @@ h6 {
     font-family: 'Cereal';
     font-size: 40px;
     font-weight: 600;
-    padding: 1rem;
+    // padding: 0.8rem;
     transition: all 1s ease-in-out;
-    width: 2.5rem;
+    width: 2rem;
     margin-right: -2px;
   }
 
@@ -845,7 +845,7 @@ h6 {
         height: 2.2rem;
         justify-content: center;
         margin-bottom: 1.5rem;
-        margin-top: 1.5rem;
+        margin-top: 1.4rem;
         
         svg {
           stroke: $indigo2;
